--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,3 +54,12 @@ $info                            : #308cbc;
 $small                           : "only screen and (min-width: 30em)";
 $medium                          : "only screen and (min-width: 48em)";
 $large                           : "only screen and (min-width: 62.5em)";
+
+/*
+   Color system
+   ========================================================================== */
+
+$text-blue: #1283af;
+$text-white: #fff;
+
+$z-index-max: 99;
