--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,6 @@
 <body id="post" {% if page.image.feature %}class="feature"{% endif %}>
 
 {% include browser-upgrade.html %}
-{% include navigation.html %}
 
 {% if page.image.feature %}
 <div class="entry-header">
@@ -18,6 +17,7 @@
   <div class="entry-image">
     <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }}">
   </div><!-- /.entry-image -->
+  {% include header.html %}
 </div><!-- /.entry-header -->
 {% endif %}
 
@@ -59,7 +59,7 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
-{% include scripts.html %}	        
+{% include scripts.html %}
 
 </body>
 </html>
